--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "Ya Liu",
   "license": "ISC",
   "dependencies": {
-    "espress": "^0.0.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.15"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.10",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   }
 }
