--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "shopfront",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
     "start": "node server/index.ts",
     "dev": "nodemon server/index.ts"
   },
@@ -17,6 +20,7 @@
     "@types/node": "^16.11.10",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.5.2"
   }
 }
