add header and new favicon

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "sourceMap": true,
-    "outDir": "dist/js",
+    "outDir": "dist",
     "rootDir": "src"
   },
   "include": [
