added dist folder for server ts files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "rootDir": "./",
     "baseUrl": ".",
+    "outDir": "server/dist",
     "paths": {
       "*": [
         "node_modules/*"
