--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Ya Liu",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
