--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,13 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "strict": true,
     "sourceMap": true,
-    "rootDir": "./",
+    "outDir": "dist",
     "baseUrl": ".",
-    "outDir": "server/dist",
     "paths": {
       "*": [
         "node_modules/*"
@@ -17,6 +16,6 @@
     }
   },
   "include": [
-    "server/**/*"
+    "src/**/*"
   ]
 }
