--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.20.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "stripe": "^8.191.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
